# MDLSproyectoDTN

./: README.md  pyproject.toml
Codigo/: Credit card.ipynb
docs/Entendimiento del Negocio/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/modeling/: baseline_models.md
notebooks/data_acquisition/: Adquisición_de_Datos.ipynb  main.py
notebooks/evaluation/: Evaluación.ipynb
notebooks/preprocessing/: Preprocesamiento.ipynb  main.py
src/evaluation/: __init__.py
src/models/: __init__.py
src/preprocessing/: __init__.py
